tests/NormalTests/paczka1/small_fuzzy/45202108.err
Error in line 5: PnxyADq5mW S123 59,33
Error in line 8: PnxyADq5mW A921 25,1
